Updated personal website

--- a/resume.html
+++ b/resume.html
@@ -22,19 +22,19 @@
 	<div id="text">
   	<p>Barista, The Rez Cafe - 2015 - Present
 
-			Responsible for advertising and drink-making in the student-run cafe at Tufts University.
+			I am responsible for advertising and drink-making in the student-run cafe at Tufts University.
 
 	<p>Front Desk Associate, Equinox / Soul Cycle -2015
 
-			In charge of registration, accounting, sales, and external communication at the front desks of Equinox and Soul Cycle.
+			I was in charge of registration, accounting, sales, and external communication at the front desks of Equinox and Soul Cycle.
 
 	<p>Keeper Aid, National Smithsonian Zoo - 2013-2014
 
-			Responsible for watching, feeding, and medicating animals in the zoo, as well as visitor education and formal research on the breeding habits of the Chambered Nautilus.
+			I was responsible for watching, feeding, and medicating animals in the zoo, as well as visitor education and formal research on the breeding habits of the Chambered Nautilus.
 
 	<p>Intern, National Botanic Garden - 2014
 
-			In charge of teaching plant biology to a group of lower school children from Southeast Washington D.C.
+			I was in charge of teaching plant biology to a group of lower school children from Southeast Washington D.C.
 	</div>
 
   		<div id="header2text">
@@ -76,7 +76,6 @@
   		<li>Art - Oil Painting and Hand Drawing</li>
   		<li>Sport - Varsity Track and Field</li>
   		<li>Club - Athletes of Color at Tufts</li>
-  		<li>Club - </li>
 	</ul>
 </div>
 
