Updated personal website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "http://emagal02.github.io/">
 <html>
 
 	<head>
@@ -5,11 +6,11 @@
 
 		<link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 
-		<link href="indexstyle.css" type"text/css" rel="stylesheet">
+		<link href="indexstyle.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
-		<img src="profile.jpg" width="400" height="400" class="attributes" alt="Profile"/>
+		<img src="profile.jpg" width="400" height="400" class="attributes" alt="Profile">
 
 		<div id="text">
 			<p><h2><a href="bio.html"> About Me </a>  ~  <a href="resume.html"> Resume </a></h2></p>
