--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
