Updated personal website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "http://emagal02.github.io/">
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -13,7 +13,7 @@
 		<img src="profile.jpg" width="400" height="400" class="attributes" alt="Profile">
 
 		<div id="text">
-			<p><h2><a href="bio.html"> About Me </a>  ~  <a href="resume.html"> Resume </a></h2></p>
+			<p><h2><a href="bio.html"> About Me </a>  ~  <a href="resume.html"> Resume </a></h2>
 		</div>
 
 	</body>
